# squawk

./: pyproject.toml
.github/workflows/: js.yml  python.yml  rust.yml
cli/: Cargo.toml
github/: Cargo.toml
