[build-system]
requires = ["maturin>=0.14,<0.15"]

build-backend = "maturin"

[project]
name = "squawk-cli"
version = "0.19.0"
description = "linter for PostgreSQL, focused on migrations."
authors = [
  { name = "Steve Dignam", email = "steve@dignam.xyz" },
]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["postgres", "postgresql", "linter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
urls = { repository = "https://github.com/sbdchd/squawk" }

[tool.maturin]
bindings = "bin"
manifest-path = "cli/Cargo.toml"
